loadouts finally done

--- a/Resources/Prototypes/Loadouts/Jobs/Cargo/cargo_technician.yml
+++ b/Resources/Prototypes/Loadouts/Jobs/Cargo/cargo_technician.yml
@@ -74,3 +74,13 @@
   id: CargoWinterBoots
   equipment:
     shoes: ClothingShoesBootsWinterCargo
+
+# PDA
+
+- type: itemLoadout
+  id: CargoPDA
+  equipment: CargoPDA
+- type: startingGear
+  id: CargoPDA
+  equipment:
+    id: CargoPDA
