--- a/Resources/Prototypes/Loadouts/Jobs/Cargo/quartermaster.yml
+++ b/Resources/Prototypes/Loadouts/Jobs/Cargo/quartermaster.yml
@@ -1,3 +1,32 @@
+# Head
+- type: itemLoadout
+  id: QuartermasterHead
+  equipment: QuartermasterHead
+
+- type: startingGear
+  id: QuartermasterHead
+  equipment:
+    head: ClothingHeadHatQMsoft
+
+- type: itemLoadout
+  id: QuartermasterBeret
+  equipment: QuartermasterBeret
+
+- type: startingGear
+  id: QuartermasterBeret
+  equipment:
+    head: ClothingHeadHatBeretQM
+
+# Ears
+
+- type: itemLoadout
+  id: QuartermasterHeadset
+  equipment: QuartermasterHeadset
+- type: startingGear
+  id: QuartermasterHeadset
+  equipment:
+    ears: ClothingHeadsetQM
+
 # Jumpsuit
 - type: itemLoadout
   id: QuartermasterJumpsuit
@@ -43,25 +72,6 @@
   id: QuartermasterFormalSuit
   equipment:
     jumpsuit: ClothingUniformJumpsuitQMFormal
-
-# Head
-- type: itemLoadout
-  id: QuartermasterHead
-  equipment: QuartermasterHead
-
-- type: startingGear
-  id: QuartermasterHead
-  equipment:
-    head: ClothingHeadHatQMsoft
-
-- type: itemLoadout
-  id: QuartermasterBeret
-  equipment: QuartermasterBeret
-
-- type: startingGear
-  id: QuartermasterBeret
-  equipment:
-    head: ClothingHeadHatBeretQM
 
 # Neck
 - type: itemLoadout
@@ -119,3 +129,13 @@
   id: QuartermasterWintercoat
   equipment:
     outerClothing: ClothingOuterWinterQM
+
+# PDA
+
+- type: itemLoadout
+  id: QuartermasterPDA
+  equipment: QuartermasterPDA
+- type: startingGear
+  id: QuartermasterPDA
+  equipment:
+    id: QuartermasterPDA
