--- a/Resources/Prototypes/Loadouts/Jobs/Civilian/chaplain.yml
+++ b/Resources/Prototypes/Loadouts/Jobs/Civilian/chaplain.yml
@@ -174,6 +174,17 @@
   equipment:
     outerClothing: ClothingOuterHoodieChaplain
 
+# Belt
+
+- type: itemLoadout # WD
+  id: ChaplainNullRod
+  equipment: ChaplainNullRod
+- type: startingGear
+  id: ChaplainNullRod
+  equipment:
+    belt: NullRod
+
+
 # PDA
 
 - type: itemLoadout # WD
