--- a/Resources/Prototypes/Loadouts/Jobs/Wildcards/boxer.yml
+++ b/Resources/Prototypes/Loadouts/Jobs/Wildcards/boxer.yml
@@ -53,3 +53,23 @@
   id: YellowBoxingGloves
   equipment:
     gloves: ClothingHandsGlovesBoxingYellow
+
+# Belt
+
+- type: itemLoadout
+  id: BoxerBelt
+  equipment: BoxerBelt
+- type: startingGear
+  id: BoxerBelt
+  equipment:
+    belt: ClothingBeltChampion
+
+# PDA
+
+- type: itemLoadout
+  id: BoxerPDA
+  equipment: BoxerPDA
+- type: startingGear
+  id: BoxerPDA
+  equipment:
+    id: BoxerPDA
