--- a/Resources/Prototypes/Loadouts/Miscellaneous/glasses.yml
+++ b/Resources/Prototypes/Loadouts/Miscellaneous/glasses.yml
@@ -15,14 +15,13 @@
     requirement:
       !type:DepartmentTimeRequirement
       department: Cargo
-      time: 36000 #10 hours of being a space trucker
+      time: 18000 #5 hours of being a space trucker
 
 # Basic options
 # Glasses
-- type: itemLoadout
+- type: itemLoadout # WD
   id: Glasses
   equipment: Glasses
-
 - type: startingGear
   id: Glasses
   equipment:
@@ -30,26 +29,24 @@
 
 # Special options
 # Jamjar
-- type: itemLoadout
+- type: itemLoadout # WD
   id: GlassesJamjar
   equipment: GlassesJamjar
   effects:
   - !type:GroupLoadoutEffect
     proto: JamjarTimer
-
 - type: startingGear
   id: GlassesJamjar
   equipment:
     eyes: ClothingEyesGlassesJamjar
 
 # Jensen
-- type: itemLoadout
+- type: itemLoadout # WD
   id: GlassesJensen
   equipment: GlassesJensen
   effects:
   - !type:GroupLoadoutEffect
     proto: JensenTimer
-
 - type: startingGear
   id: GlassesJensen
   equipment:
