new jukebox music and songs

--- a/Resources/Prototypes/_White/Fluff/serbwo.yml
+++ b/Resources/Prototypes/_White/Fluff/serbwo.yml
@@ -285,7 +285,7 @@
   sponsorOnly: true
   whitelistJobs: [Paramedic]
 
-- type: loadout
+- type: sponsorLoadout
   id: CargoLoadoutSerbwoSA
   entity: HandTeleporter
   sponsorOnly: true
