fix: fix missed musician, ce and medical loadouts

--- a/Resources/Prototypes/Loadouts/Jobs/Civilian/musician.yml
+++ b/Resources/Prototypes/Loadouts/Jobs/Civilian/musician.yml
@@ -26,6 +26,16 @@
   equipment:
     back: ClothingBackpackDuffelMusicianFilled
 
+# Jumpsuit
+
+- type: itemLoadout # WD
+  id: MusicianJumpsuit
+  equipment: MusicianJumpsuit
+- type: startingGear
+  id: MusicianJumpsuit
+  equipment:
+    jumpsuit: ClothingUniformJumpsuitMusician
+
 # Outerclothing
 - type: itemLoadout
   id: MusicianWintercoat
