--- a/Resources/Prototypes/Loadouts/loadout_groups.yml
+++ b/Resources/Prototypes/Loadouts/loadout_groups.yml
@@ -585,6 +585,16 @@
   loadouts:
   - MimePDA
 
+- type: loadoutGroup # WD
+  id: MusicianHead
+  name: loadout-group-head
+  loadouts:
+  - BowlerHat
+  - Tophat
+  - HatMagician
+  - BeretStandardЙ
+  - FrenchBeret
+
 - type: loadoutGroup
   id: MusicianBackpack
   name: loadout-group-backpack
@@ -593,6 +603,14 @@
   - MusicianSatchel
   - MusicianDuffel
   - CommonSatchelLeather # WD
+
+- type: loadoutGroup # WD
+  id: MusicianJumpsuit
+  name: loadout-group-jumpsuit
+  loadouts:
+  - MusicianJumpsuit
+  - JumpsuitFamily
+  - JumpsuitLoungewear
 
 - type: loadoutGroup
   id: MusicianOuterClothing
@@ -927,6 +945,7 @@
   name: loadout-group-ears
   loadouts:
   - ChiefEngineerHeadset
+  - ChiefEngineerHeadsetAlt
 
 - type: loadoutGroup
   id: ChiefEngineerJumpsuit
@@ -1871,6 +1890,7 @@
 - type: loadoutGroup
   id: CommonMedicalMask
   name: loadout-group-mask
+  minLimit: 0
   loadouts:
   - MedicalMask
 
