--- a/Resources/Prototypes/Loadouts/loadout_groups.yml
+++ b/Resources/Prototypes/Loadouts/loadout_groups.yml
@@ -321,6 +321,13 @@
   loadouts:
   - ChaplainMask
 
+- type: loadoutGroup # WD edit
+  id: ChaplainNeck
+  name: loadout-group-neck
+  loadouts:
+  - ChaplainNecklaceSilver
+  - ChaplainNeck
+
 - type: loadoutGroup
   id: ChaplainJumpsuit
   name: loadout-group-jumpsuit
@@ -356,11 +363,10 @@
   - ChaplainNullRod
 
 - type: loadoutGroup # WD edit
-  id: ChaplainNeck
-  name: loadout-group-neck
+  id: ChaplainJobTrinkets
+  name: loadout-group-job-trinkets
   loadouts:
-  - ChaplainNecklaceSilver
-  - ChaplainNeck
+  - ArmamentsBeacon
 
 - type: loadoutGroup
   id: ChaplainPDA
@@ -1848,6 +1854,7 @@
   minLimit: 0
   loadouts:
   - ParamedicBelt
+  - MedicalBeltRig
 
 - type: loadoutGroup
   id: ParamedicPDA
