--- a/Resources/Maps/White/WonderBox.yml
+++ b/Resources/Maps/White/WonderBox.yml
@@ -126986,6 +126986,11 @@ entities:
       parent: 2
 - proto: PottedPlant21
   entities:
+  - uid: 8708
+    components:
+    - type: Transform
+      pos: 27.5,0.5
+      parent: 2
   - uid: 16543
     components:
     - type: Transform
