fix: fix jukebox spawn instead of boombox

--- a/Resources/Prototypes/Catalog/MeatyOrePanel/meatyore_catalog.yml
+++ b/Resources/Prototypes/Catalog/MeatyOrePanel/meatyore_catalog.yml
@@ -1835,7 +1835,7 @@
 #Dj
 - type: listing
   id: DjJukebox
-  productEntity: Jukebox
+  productEntity: Boombox
   cost:
     MeatyOreCoin: 0
   categories:
