tweak: подняты цены в раздатчиках в среднем в два раза. А может больше

--- a/Resources/Prototypes/Entities/Clothing/Eyes/glasses.yml
+++ b/Resources/Prototypes/Entities/Clothing/Eyes/glasses.yml
@@ -181,6 +181,8 @@
   - type: ShowSecurityIcons
   - type: IdentityBlocker
     coverage: EYES
+  - type: StaticPrice
+    price: 25
 
 - type: entity
   parent: ClothingEyesBase
