--- a/Resources/Prototypes/Entities/Objects/Tools/lighters.yml
+++ b/Resources/Prototypes/Entities/Objects/Tools/lighters.yml
@@ -213,6 +213,8 @@
   - type: UseDelay
   - type: IgnitionSource
     ignited: false
+  - type: StaticPrice
+    price: 20
 
 - type: entity
   name: flippo engraved lighter
