--- a/Resources/Prototypes/Entities/Clothing/Hands/colored.yml
+++ b/Resources/Prototypes/Entities/Clothing/Hands/colored.yml
@@ -165,6 +165,8 @@
   - type: Fiber
     fiberMaterial: fibers-insulative
     fiberColor: fibers-yellow
+  - type: StaticPrice
+    price: 50
 
 - type: entity
   parent: ClothingHandsGlovesColorYellow
