--- a/Resources/Prototypes/Entities/Objects/Consumable/Food/Containers/plate.yml
+++ b/Resources/Prototypes/Entities/Objects/Consumable/Food/Containers/plate.yml
@@ -54,6 +54,8 @@
     materialComposition:
       Glass: 60
   - type: SpaceGarbage
+  - type: StaticPrice
+    price: 10
 
 - type: entity
   name: broken plate
@@ -108,6 +110,8 @@
   - type: PhysicalComposition
     materialComposition:
       Glass: 30
+  - type: StaticPrice
+    price: 5
 
 - type: entity
   parent: FoodPlateTrash
@@ -137,6 +141,8 @@
   - type: Tag
     tags:
     - Trash
+  - type: StaticPrice
+    price: 15
 
 - type: entity
   name: plastic plate
@@ -154,6 +160,8 @@
   - type: Tag
     tags:
     - Trash
+  - type: StaticPrice
+    price: 7
 
 # Pie Tin
 
@@ -178,3 +186,5 @@
     materialComposition:
       Steel: 60
   - type: SpaceGarbage
+  - type: StaticPrice
+    price: 10
