add: add captain gloves

--- a/Resources/Prototypes/Loadouts/Jobs/Command/captain.yml
+++ b/Resources/Prototypes/Loadouts/Jobs/Command/captain.yml
@@ -120,6 +120,15 @@
   equipment:
     outerClothing: ClothingOuterWinterCap
 
+# Gloves
+- type: itemLoadout
+  id: CaptainGloves
+  equipment: CaptainGloves
+- type: startingGear
+  id: CaptainGloves
+  equipment:
+    gloves: ClothingHandsGlovesCaptain
+
 # PDA
 
 - type: itemLoadout # WD
