--- a/Resources/Prototypes/Loadouts/loadout_groups.yml
+++ b/Resources/Prototypes/Loadouts/loadout_groups.yml
@@ -76,6 +76,13 @@
   - CaptainWintercoat
 
 - type: loadoutGroup
+  id: CaptainOuterClothing
+  name: loadout-group-gloves
+  minLimit: 0
+  loadouts:
+  - CaptainGloves
+
+- type: loadoutGroup
   id: CaptainShoes
   name: loadout-group-shoes
   loadouts:
