--- a/Resources/Prototypes/Loadouts/Jobs/Medical/chief_medical_officer.yml
+++ b/Resources/Prototypes/Loadouts/Jobs/Medical/chief_medical_officer.yml
@@ -103,6 +103,14 @@
   equipment:
     ears: ClothingHeadsetCMO
 
+- type: itemLoadout # WD
+  id: CMOHeadsetAlt
+  equipment: CMOHeadsetAlt
+- type: startingGear
+  id: CMOHeadsetAlt
+  equipment:
+    ears: ClothingHeadsetAltMedical
+
 # PDA
 
 - type: itemLoadout # WD
