--- a/Resources/Prototypes/Loadouts/Jobs/common.yml
+++ b/Resources/Prototypes/Loadouts/Jobs/common.yml
@@ -465,12 +465,13 @@
   equipment:
     belt: ClothingBeltUtility
 
-# Inhands
+# Job trinkets
 
 - type: itemLoadout
   id: Cane
   equipment: Cane
 - type: startingGear
   id: Cane
-  equipment:
-    belt: Cane
+  storage:
+    back:
+    - Cane
