captain gloves fix

--- a/Resources/Prototypes/Loadouts/loadout_groups.yml
+++ b/Resources/Prototypes/Loadouts/loadout_groups.yml
@@ -77,7 +77,7 @@
   - CaptainWintercoat
 
 - type: loadoutGroup
-  id: CaptainOuterClothing
+  id: CaptainGloves
   name: loadout-group-gloves
   minLimit: 0
   loadouts:
