add shoes for reporter and zookeeper

--- a/Resources/Prototypes/Loadouts/role_loadouts.yml
+++ b/Resources/Prototypes/Loadouts/role_loadouts.yml
@@ -585,6 +585,7 @@
   - CommonGlasses # WD
   - ZookeeperJumpsuit # WD
   - CommonBackpack
+  - CommonShoes # WD
   - ZookeeperPDA # WD
   - Trinkets
 
@@ -598,6 +599,7 @@
   - ReporterJumpsuit
   - CommonGloves # WD
   - CommonBackpack
+  - CommonShoes # WD
   - ReporterPDA # WD
   - Trinkets
 
