--- a/Resources/Prototypes/_White/JukeboxAndStuff/jukebox_stuff.yml
+++ b/Resources/Prototypes/_White/JukeboxAndStuff/jukebox_stuff.yml
@@ -36,7 +36,7 @@
   description: Mini cassette player
   suffix: Empty
   components:
-    - type: Jukebox
+    - type: WhiteJukebox
       maxAudioRange: 5
       rolloffFactor: 3.5
     - type: Sprite
