--- a/Resources/Prototypes/Entities/Objects/Power/lights.yml
+++ b/Resources/Prototypes/Entities/Objects/Power/lights.yml
@@ -12,6 +12,8 @@
     layers:
       - map: [ enum.LightBulbVisualLayers.Base ]
         state: normal
+  - type: Item
+    size: Tiny
   - type: LightBulb
   - type: Damageable
     damageContainer: Inorganic
@@ -75,6 +77,9 @@
   id: BaseLightTube
   abstract: true
   components:
+  - type: Item
+    size: Small
+    storedRotation: -44
   - type: Sprite
     sprite:  Objects/Power/light_tube.rsi
   - type: LightBulb
