--- a/Resources/Prototypes/Loadouts/Jobs/common.yml
+++ b/Resources/Prototypes/Loadouts/Jobs/common.yml
@@ -174,6 +174,14 @@
     gloves: ClothingHandsGlovesColorBlack
 
 - type: itemLoadout
+  id: GlovesColorWhite
+  equipment: GlovesColorWhite
+- type: startingGear
+  id: GlovesColorWhite
+  equipment:
+    gloves: ClothingHandsGlovesColorWhite
+
+- type: itemLoadout
   id: GlovesLatex
   equipment: GlovesLatex
 - type: startingGear
